crates/atlas-runtime/tests/snapshots/parser_tests__function_call_no_args.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Call:
            callee:
              Identifier:
                name: foo
                span:
                  start: 0
                  end: 3
            args: []
            span:
              start: 0
              end: 5
        span:
          start: 0
          end: 6
