crates/atlas-runtime/tests/snapshots/parser_tests__less_than.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Binary:
            op: Lt
            left:
              Literal:
                - Number: 1
                - start: 0
                  end: 1
            right:
              Literal:
                - Number: 2
                - start: 4
                  end: 5
            span:
              start: 0
              end: 5
        span:
          start: 0
          end: 6
