crates/atlas-runtime/tests/snapshots/parser_tests__logical_not.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Unary:
            op: Not
            expr:
              Literal:
                - Bool: true
                - start: 1
                  end: 5
            span:
              start: 0
              end: 5
        span:
          start: 0
          end: 6
